package android_notifier;

option java_package = "com.notifier.protocol";
option java_outer_classname = "Protocol";
option optimize_for = LITE_RUNTIME;

message Notification {
    required fixed64 device_id = 1;
    required fixed64 id = 2;
    required Type type = 3;

    optional string description = 4;
    optional string title = 5;
    optional bytes icon = 6;

    optional int32 battery_level = 7;
    optional string phone_number = 8;
    optional string third_party_data = 9;

    enum Type {
        RING = 0;
        SMS = 1;
        MMS = 2;
        BATTERY = 3;
        VOICEMAIL = 4;
        PING = 5;
        USER = 6;
    }
}

message Contact {
  enum Type {
    HOME = 0;
    MOBILE = 1;
    WORK = 2;
    OTHER = 3;
  }

  required string name = 1;
  required string number = 2;
  required Type type = 3;
  optional string other_type = 4;
  // TODO: Figure this one out
  // optional bytes picture = 5;
}

message Discovery {
  required string desktop_id = 1;
  required bytes ip_address = 2;
  required int32 ip_port = 3;
  optional string bluetooth_address = 4;
  required bool only_paired = 5;
  repeated string paired_device_ids = 6;
}

message CommandRequest {
  required fixed64 device_id = 1;
  required fixed64 command_id = 2;

  enum CommandType {
    CALL = 1;
    ANSWER = 2;
    HANG_UP = 3;
    SEND_SMS = 4;
    SEND_MMS = 5;
    QUERY = 6;
    DISCOVER = 7;
  }
  required CommandType command_type = 3;

  // --------------------
  // Type-specific fields
  // --------------------

  message CallOptions {
    required string phone_number = 1;
  };

  message SmsOptions {
    required string phone_number = 1;
    required string sms_message = 2;
  };

  message QueryOptions {
    required string query = 1;
  };

  optional CallOptions call_options = 10;
  optional SmsOptions sms_options = 11;
  optional QueryOptions query_options = 12;
}

message CommandResponse {
  // Id of the device responding
  required fixed64 device_id = 1;

  // Id of the command being responded to
  required fixed64 command_id = 2;

  optional bool success = 3 [default = false];
  optional string errorMessage = 4;

  // --------------------
  // Type-specific fields
  // --------------------

  message SearchResults {
    repeated Contact contacts = 1;
  }
  optional SearchResults search_results = 10;
}
